fix verify command